@@ -14,17 +14,13 @@ ToDo
         make target fields cumulative
         change flist to apply only to CSV
 
-    spidering BUGS!!!
-        links file shows incorrect tree when 'breadth first'
-        crawl goes to depth +1
-        diagram shows soup sandwich
-        deal with diagrams dying when there are too many discovered URLs
-
     "-m" to pull and parse docs and images for sensitive info
         form PIL import Image
         from PIL.ExifTags import TAGS
         i = Image.open("image.jpg")
         for t, v in i._getexif().items(): print v
+        use <logfolder>/meta/<hostname>_filename for downloaded files
+        use <logfolder>/meta/<hostname>_docs.txt for a list of urls for files found (currently created in ./maps folder)
 
     scan comparison functionality
         compare two scans within one db
