@@ -1,4 +1,4 @@
-VERSION = "0.1.75"
+VERSION = "0.1.76"
 
 # Update information
 REPO_DL_PATH = "https://bitbucket.org/al14s/rawr/downloads/"
@@ -10,11 +10,11 @@ VER_FILE = "ver.csv"
 DOC_TYPES = ("DS_Store", "pdf", "log", "dot", "doc", "docx", "xls", "xlsx", "txt", "ods", "odf", "ppt", "pptx", "tar",
              "rtf", "odg", "odp", "potx", "potm", "pot", "otp", "xlt", "stc", "stw", "dotm", "odb", "ott", "zip",
              "pxl", "wks", "wk1", "xlsb", "sylk", "xlc", "dif", "oth", "xml", "odt", "pptm", "xlm", "xltm", "gz",
-             "cab", "xltx", "docm", "xlsm", "123", "dbf", "ppsx", "ps1", "pl", "bat", "vbs", "py", "rb", "sh"
-            )
+             "cab", "xltx", "docm", "xlsm", "123", "dbf", "ppsx", "ps1", "pl", "bat", "vbs", "py", "rb", "sh",
+             "swf", "jsp", "db", "gif", "png", "rar", "xz"
+             )
 
-# other docs of interest
-OTHER_FILES = ("jpeg", "jpg", "gif", "png")
+EXIF_FILES = ("jpeg", "jpg", "tiff", "wav", "riff")
 
 
 # PhantomJS - http://phantomjs.org/
